--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -8,3 +8,37 @@
 
   <%= button_to "Destroy this consultation", @consultation, method: :delete %>
 </div>
+
+
+<script crossorigin src="https://unpkg.com/@daily-co/daily-js"></script>
+<script>
+let myLink = '<%= @room_link %>';
+if (window.innerWidth <= 600) {
+  callFrame = window.DailyIframe.createFrame({
+  showLeaveButton: true,
+      iframeStyle: {
+      position: 'fixed',
+      bottom: 0,
+      width: '100%',
+      height: '100%'
+
+      }
+});
+
+  callFrame.join({ url: myLink })
+} else {
+      callFrame = window.DailyIframe.createFrame({
+      showLeaveButton: true,
+      iframeStyle: {
+      position: 'fixed',
+      top: 0,
+      right: 0,
+      width: '50%',
+      height: '100%'
+      }
+});
+
+  callFrame.join({ url: myLink })
+}
+
+</script>
