--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 
-<script crossorigin src="https://unpkg.com/@daily-co/daily-js"></script>
+<script src="https://unpkg.com/@daily-co/daily-js"></script>
 <script>
 let myLink = '<%= @room_link %>';
 if (window.innerWidth <= 600) {
